--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta
-      name="description"
-      content="Connect is students community in EMEA College kondotty"
-    />
-    <meta
-      name="keywords"
-      content="connect, student community, community, emea, connectemea, tinkerhubemea, tinkerhub, hackclubemea, hackclub"
-    />
-    <meta name="author" content="connectemea" />
-    <link rel="apple-touch-icon" href="/logo.svg" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>connectemea</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="/logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <!-- Manifest and PWA -->
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="apple-touch-icon" href="/logo.svg" />
+
+  <!-- Meta info -->
+  <meta name="description" content="Connect is students community in EMEA College Kondotty" />
+  <meta name="keywords"
+    content="connect, student community, community, emea, connectemea, tinkerhubemea, tinkerhub, hackclubemea, hackclub , emea college, student community" />
+  <meta name="author" content="connectemea" />
+
+  <title>connectemea</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
